# generic_mcp_agent

./: .gitignore  README.md  main.py  pyproject.toml
agents/responder/: agent.py
api/: server.py
core/: base_agent.py
schemas/: context.py  message.py
